# eeyf

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  BLOCKING_REMOVAL.md  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  LICENSE-MIT  PHASE_1_3_COMPLETE.md  PHASE_2_COMPLETE.md  PRE_PUBLICATION_REPORT.md  PRE_RELEASE_COMPLETION.md  README.md  ROADMAP.md  ROADMAP_UPDATE_SUMMARY.md  SECURITY.md  build.rs  debug_deadlock.rs  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  rust.yml
benches/: performance.rs
docs/: ANALYTICS.md  ARCHITECTURE.md  BINDINGS_ARCHITECTURE_CHANGE.md  BINDINGS_REMOVAL_SUMMARY.md  CLI.md  CODE_COVERAGE.md  CONTRIBUTING.md  DOCUMENTATION_STATUS.md  ERROR_HANDLING.md  FFI_GUIDE.md  FFI_QUICK_REFERENCE.md  FUZZING.md  GETTING_STARTED_TUTORIAL.md  MIGRATION.md  PERFORMANCE.md  PHASE10.2_COMPLETION.md  PHASE10.2_SIMPLIFIED.md  PHASE10_COMPLETION.md  PHASE10_SUMMARY.md  PHASE6_COMPLETION.md  PHASE7_COMPLETION.md  PHASE7_SUMMARY.md  PHASE8_COMPLETION.md  PHASE8_SUMMARY.md  PHASE9_COMPLETION.md  PHASE9_SUMMARY.md  PHASE_3.2_SUMMARY.md  PHASE_4.1_BATCH_COMPLETE.md  PHASE_4.1_COMPLETE.md  PHASE_4.1_MARKET_HOURS_COMPLETE.md  PHASE_4.1_PROGRESS.md  PHASE_4.1_VALIDATION_COMPLETE.md  PHASE_4.1_WEBSOCKET_COMPLETE.md  PHASE_4.1_WEBSOCKET_ENHANCEMENTS.md  PHASE_4.2_SCREENER_COMPLETE.md  PHASE_4.3_DATA_PROCESSING_COMPLETE.md  PHASE_5_PERFORMANCE_OPTIMIZATION_COMPLETE.md  PHASE_5_SUMMARY.md  RELIABILITY.md  RUNTIME.md  (+4 more)
examples/: batch_quotes.rs  builder_pattern_demo.rs  debug_deadlock.rs  dividends.rs  error_recovery.rs  get_fxrates.rs  get_quote.rs  get_quote_history.rs  get_quote_period_interval.rs  market_hours.rs  phase2_complete_demo.rs  phase2_simple_demo.rs  phase3_performance_demo.rs  portfolio_tracker.rs  price_alerts.rs  rate_limited_quotes.rs  screener_custom.rs  screener_presets.rs  search_ticker.rs  splits.rs  symbol_validation.rs  websocket_advanced.rs  websocket_streaming.rs
examples/analytics/: Cargo.toml  README.md
examples/analytics/src/: main.rs
examples/basic-app/: Cargo.toml  README.md
examples/basic-app/src/: main.rs
examples/runtime-async-std/: Cargo.toml  README.md
examples/runtime-async-std/src/: main.rs
examples/runtime-smol/: Cargo.toml  README.md
examples/runtime-smol/src/: main.rs
examples/runtime-tokio/: Cargo.toml  README.md
examples/runtime-tokio/src/: main.rs
integrations/web-server/: Cargo.toml  README.md
integrations/web-server/examples/: basic_api.rs  database_storage.rs  multi_framework.rs  websocket_stream.rs
integrations/web-server/src/: database.rs  helpers.rs  lib.rs
presets/: development.toml  enterprise.toml  minimal.toml  production.toml
proto/: yaticker.proto
src/: advanced_cache.rs  analytics.rs  async_impl.rs  audit.rs  batch.rs  builder.rs  circuit_breaker.rs  compression.rs  config.rs  connection_pool.rs  connection_pool_advanced.rs  enterprise.rs  error_categories.rs  export.rs  fallback.rs  health.rs  http2.rs  intelligent_rate_limit.rs  lib.rs  limits.rs  market_hours.rs  metrics.rs  observability.rs  performance_optimization.rs  presets.rs  quotes.rs  rate_limiter.rs  request_deduplication.rs  response_cache.rs  retry.rs  runtime.rs  runtime_config.rs  security.rs  shutdown.rs  timeseries.rs  tracing.rs  transform.rs  validate.rs  validation.rs  websocket.rs  (+1 more)
src/screener/: mod.rs  presets.rs  query.rs
templates/: README.md
templates/trading-bot/: Cargo.toml  README.md
tests/: chaos.rs  error_handling_tests.rs  integration_tests.rs  load_tests.rs  mock_server.rs  observability_integration.rs  phase2_integration.rs  property_tests.rs
