[package]
    edition = "2021"
    name    = "eeyf-trading-bot"
    version = "0.1.0"

[dependencies]
    anyhow = "1"
    chrono = { version = "0.4", features = ["serde"] }
    dotenv = "0.15"
    eeyf = { path = "../../", features = [
        "decimal",
        "default",
        "observability",
        "performance-full",
        "phase5",
        "phase7",
    ] }
    rust_decimal = "1"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    sqlx = { version = "0.7", features = [
        "chrono",
        "decimal",
        "postgres",
        "runtime-tokio-native-tls",
    ] }
    thiserror = "1"
    tokio = { version = "1", features = ["full"] }
    toml = "0.8"
    tracing = "0.1"
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
    tokio-test = "0.4"
